<resources>
    <string name="app_name">UFO DESTROYER</string>
    <string name="win_message">Congratulations You Saved All The PIZZA!</string>
    <string name="game_over">GAME OVER</string>
    <string name="action_settings">Settings</string>
    <string name="win_sound"><a href ="https://freesound.org/people/rhodesmas/sounds/320775/">Win Sound</a></string>
    <string name="bomb_sound"><a href ="https://freesound.org/people/MATTIX/sounds/441497/">Bomb Sound</a></string>
    <string name="scan_sound"><a href ="https://freesound.org/people/samsara/sounds/49989/">Scan Sound</a></string>'
    <string name="UFO_link"><a href ="https://www.nicepng.com/ourpic/u2y3a9t4t4o0y3u2_ftealiens-pizza-alien-ufo-brightcolors-aliens-aliens-abducting/">UFO Image</a></string>
    <string name="basic_game_help"> 1. Aliens have invaded earth to steal its greatest creation ... PIZZA!\n
2. The goal of the game is find all the aliens hidden in space and save the pizza.\n
3. Tap a button to look for a an alien and get our pizza back!.\n
4. If the button does not contain an alien it will perform a scan.\n
5. A scan shows the number of hidden aliens in the column and row related to that button.\n
6. Click on an alien after it has been found to perform a scan</string>
    <string name="authors"><a href ="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">By: Kevin Chen Su and Nathan Simms</a></string>
    <string name="help_image"><a href ="https://www.pngitem.com/middle/JbhJoo_transparent-open-book-png-open-orange-books-png/">Help Image</a></string>
    <string name="bombs_found_0_of">Bombs found 0 of </string>
    <string name="scans_used_0">Scans used: 0</string>
    <string name="winner">WINNER!</string>
    <string name="main_menu">Main Menu</string>
    <string name="by_kevin_chen_su_and_nathan_simms">By: Kevin Chen Su and Nathan Simms</string>
    <string name="todo">TODO</string>
    <string name="skip">skip</string>
    <string name="board_size">Board Size</string>
    <string name="number_of_mines">Number of Mines</string>
    <string name="reset_times_played_and_selected_highscores">RESET TIMES PLAYED and SELECTED HIGHSCORES</string>
    <string name="how_to_play">How To Play:</string>
    <string name="about">About:</string>
    <string name="ufo_destroyer">UFO DESTROYER</string>
    <string name="save_the_za">SAVE THE ZA</string>
    <string name="help">HELP</string>
    <string name="mines_chosen">mines</string>
    <string name="bombs_found_">Bombs Found </string>
    <string name="of"> of </string>
    <string name="scans_used">Scans Used: </string>
    <string name="times_played">Times Played: </string>
    <string name="high_score">High Score: </string>
    <string name="warning">WARNING</string>
    <string name="options">OPTIONS</string>
    <string name="welcome_screen_background"> <a href ="https://wallpapercave.com/wp/wp2789908.jpg">Welcome Background</a></string>
    <string name="play_game_background"> <a href ="https://i.pinimg.com/originals/70/2d/28/702d289aa90b45695752d145e119b3e1.jpg">Play Game Background</a></string>
    <string name="pizza_image"> <a href ="https://www.seekpng.com/idown/u2w7w7y3y3t4w7i1_fotolia-134097986-subscription-monthly-m-pizza-slice-cartoon/">Pizza Image</a></string>
    <string name="help_screen_background"><a href ="https://cdn.dribbble.com/users/1129147/screenshots/3328389/spacepizza.gif">Help Background</a></string>
    <string name="options_background"><a href ="https://wallpapermemory.com/398710">Options Background</a></string>
    <string name="start_up_sound"><a href ="https://freesound.org/people/Erratic/sounds/235/">Start Up Sound</a></string>
</resources>
